Details
Description
TileWorld 1.3.2 from rapps
VBox 4.3.12 VBEMP
Reproduction steps
-set desktop resolution to 800x600 32bit
-open a cmd window
The game can be started with cmdline param
tworld -F
|
It must be a capital F to work!
Expected result
The game starts in fullscreen and does not leave taskbar visible.
Observed result
The game starts in fullscreen but does leave taskbar visible.
0.4.11-RC-22-g2522ec1__TWorld_TaskbarVisible.log
I don't think this fully duplicates CORE-11242, because in my test notes I wrote:
"when starting fullscreen via cmd line param -F 0.4.5RC2 did not leave the taskbar visible initially but 0.4.6RC1 does". So it's time to have a specific ticket for this app to perform a full regression-test.
Attachments
Issue Links
- relates to
-
CORE-14979 Regression of r75407, It depends on the desktop color-depth bpp whether taskbar is hidden in fullscreen of Anno 1602
-
- Resolved
-
-
CORE-15599 Regression of r75407, Rocks&Diamonds 3.3.1.2 from rapps leaves its taskbar visible when switching into fullscreen via alt+enter
-
- Resolved
-
-
CORE-15600 Regression of r75407, LGeneral from rapps leaves the taskbar visible when selecting fullscreen from context menu
-
- Resolved
-
-
CORE-15654 Regression of r75407, Exiting "Bound Around Demo" from fullscreen leaves black borders around the desktop
-
- Resolved
-
-
CORE-11242 Some games may leave taskbar visible in fullscreen mode
-
- Open
-